Remove unused export modules, clean up comments